CI secrets 에 API 키 추가

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -11,6 +11,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      OPEN_WEATHER_API_KEY: ${{ secrets.OPEN_WEATHER_API_KEY }}
+
     steps:
     - uses: actions/checkout@v4
     - name: set up JDK 17
