google places api key 추가

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -14,6 +14,7 @@ jobs:
     env:
       OPEN_WEATHER_API_KEY: ${{ secrets.OPEN_WEATHER_API_KEY }}
       CHAT_GPT_API_KEY: ${{ secrets.CHAT_GPT_API_KEY }}
+      GOOGLE_PLACES_API_KEY: ${{ secrets.GOOGLE_PLACES_API_KEY }}
 
     steps:
     - uses: actions/checkout@v4
